# fastapi-mongodb-crud-opration

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: __init__.py  item.py
app/core/: config.py
app/db/: base.py
app/models/: item.py
